<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_label">All</string>
    <string name="allow_app_usage_access">Allow app usage access</string>
    <string name="app_browser_menu_item_app_info">App info</string>
    <string name="app_browser_menu_item_clear_cache">Clear cache</string>
    <string name="app_browser_menu_item_uninstall">Uninstall</string>
    <string name="app_cache_button_label">Clear cache</string>
    <string name="app_cache_secondary_title">Temporary files from apps</string>
    <string name="app_cache_title">App cache</string>
    <string name="app_deletion_in_progress_title">Uninstalling %1$s</string>
    <string name="app_deletion_no_apps_deleted">No apps removed</string>
    <string name="app_name">Files Go</string>
    <string name="app_usage_permission_dialog_step1">Choose %1$s from the app list</string>
    <string name="app_usage_permission_dialog_step1_old">Select %1$s from app list</string>
    <string name="app_usage_permission_dialog_step2">Turn on Permit usage access</string>
    <string name="app_usage_permission_dialog_step2_old">Toggle on usage access</string>
    <string name="app_usage_permission_dialog_subtitle">Allow access to your apps usage</string>
    <string name="app_usage_permission_dialog_title">Allow app usage access</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcache_progress_bar_cancelled">Canceled (%1$s deleted)</string>
    <string name="appcache_progress_bar_cancelled_no_size">Canceled</string>
    <string name="appcache_progress_bar_cancelling">Canceling…</string>
    <string name="appcache_progress_bar_completed">%1$s deleted</string>
    <string name="appcache_progress_bar_completed_no_size">Cache deleted</string>
    <string name="appcache_progress_bar_deleting_cache">Deleting…</string>
    <string name="appcache_progress_bar_error">Cache deletion interrupted. Try again later.</string>
    <string name="apps_label">Apps</string>
    <string name="audio_label">Audio</string>
    <string name="audio_play_content_description">Play audio icon</string>
    <string name="blob_all_caught_up_text">"You're caught up for now!"</string>
    <string name="blob_what_to_do_text">Pull down to refresh</string>
    <string name="bluetooth_search_failed">"Can't search nearby. Bluetooth isn't responding."</string>
    <string name="bluetooth_turned_off_during_broadcast">"Can't find sender. Please keep bluetooth on."</string>
    <string name="bluetooth_turned_off_during_scan">"Can't search nearby. Keep Bluetooth on."</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_cd">Stop</string>
    <string name="cancelling">Canceling…</string>
    <string name="card_action_complete_please_check_back_later">Check back later for %1$s</string>
    <string name="card_disappearing_explanation">"Cards will go away when you're done with them"</string>
    <string name="card_dismissed">Card dismissed</string>
    <string name="cards_ui_unused_apps_permission_request_allow_button">Find unused apps</string>
    <string name="cards_ui_unused_apps_permission_request_allow_button_get_start">Get started</string>
    <string name="cards_ui_unused_apps_permission_request_subtitle">"Allow access to your apps usage, you'll be redirected to settings"</string>
    <string name="cards_ui_unused_apps_permission_request_subtitle_new">"To know which apps you're not using, let Files Go access your app usage"</string>
    <string name="cards_ui_unused_apps_permission_request_title">Find unused apps</string>
    <string name="cards_ui_usage_stats_toast">Let %1$s have usage access</string>
    <string name="cards_ui_usage_stats_toast_old">Turn on access for Files Go</string>
    <string name="cd_avatar">User Avatar</string>
    <string name="cd_close">Close</string>
    <string name="cd_connected_avatar">Avatar of person connected to.</string>
    <string name="cd_disconnect_button">Disconnect</string>
    <string name="cd_media_icon">Thumbnail of content being transferred</string>
    <string name="cd_media_large">Preview of transferred content.</string>
    <string name="celebration_message">Enjoy the extra space!</string>
    <string name="change_profile_name">Change name</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_dialog_cache_deletion_accept_text">Clear</string>
    <string name="confirm_dialog_cache_deletion_sub_title">When cache is cleared, temporary files are deleted</string>
    <string name="confirm_dialog_cache_deletion_title">Clear cache?</string>
    <string name="confirm_dialog_duplicates_info_body_text">"%1$s will delete the older versions of a duplicate file. The number of duplicates to delete is shown for a file.

The newest version will be saved."</string>
    <string name="file_browser_menu_item_copy_to_sd">Copy to SD card</string>
    <string name="file_browser_menu_item_delete">Delete</string>
    <string name="file_browser_menu_item_file_info">File info</string>
    <string name="file_browser_menu_item_install">Install</string>
    <string name="file_browser_menu_item_move_to_sd">Move to SD card</string>
    <string name="file_browser_menu_item_rename">Rename</string>
    <string name="file_browser_menu_item_select_all">Select All</string>
    <string name="file_browser_popup_select">Select</string>
    <string name="file_browser_regular_selection_mode_share">Share</string>
    <string name="file_browser_sort">Sort</string>
    <string name="file_browser_sort_option_date_modified">By date modified</string>
    <string name="file_browser_sort_option_name">By name</string>
    <string name="file_browser_sort_option_size">By size</string>
    <string name="settings_change_name_key">ChangeName</string>
    <string name="settings_change_name_summary">Tap to set your name</string>
    <string name="settings_change_name_title">Your name</string>
    <string name="settings_language_picker_key">LanguagePicker</string>
    <string name="settings_language_picker_title">Language</string>
    <string name="settings_notification_category_key">Notifications</string>
    <string name="settings_notification_category_title">Notifications</string>
    <string name="settings_notification_downloaded_files_key">DownloadedFiles</string>
    <string name="settings_notification_downloaded_files_summary">Get alerts when downloaded files are taking up space</string>
    <string name="settings_notification_downloaded_files_title">Downloaded files</string>
    <string name="settings_notification_duplicate_files_key">DuplicateFiles</string>
    <string name="settings_notification_duplicate_files_summary">Get alerts when duplicate files are taking up space.</string>
    <string name="settings_notification_duplicate_files_title">Duplicate files</string>
    <string name="settings_notification_free_up_space_key">FreeUpSpace</string>
    <string name="settings_notification_free_up_space_summary">Get reminders when storage is almost full</string>
    <string name="settings_notification_free_up_space_title">Low storage</string>
    <string name="settings_notification_offline_messenger_images_key">OfflineMessengerImages</string>
    <string name="settings_notification_offline_messenger_images_summary">Get alerts when large media folders are taking up space</string>
    <string name="settings_notification_offline_messenger_images_title">Large media folders</string>
    <string name="settings_notification_unused_apps_key">UnusedApps</string>
    <string name="settings_notification_unused_apps_summary">"Get alerts when apps haven't been used for more than 30 days"</string>
    <string name="settings_notification_unused_apps_title">Unused apps</string>
    <string name="settings_other_category_key">OtherSettings</string>
    <string name="settings_other_category_title">Other settings</string>
    <string name="settings_screen_key">Settings</string>
</resources>