<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/quantum_ic_share_vd_theme_24" android:id="@id/share_action" android:title="@string/file_browser_regular_selection_mode_share" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/quantum_ic_delete_vd_theme_24" android:id="@id/delete_action" android:title="@string/file_browser_menu_item_delete" app:showAsAction="ifRoom" />
    <item android:id="@id/select_all_action" android:title="@string/file_browser_menu_item_select_all" app:showAsAction="never" />
    <item android:id="@id/copy_to_sd_action" android:title="@string/file_browser_menu_item_copy_to_sd" app:showAsAction="never" />
    <item android:id="@id/move_to_sd_action" android:title="@string/file_browser_menu_item_move_to_sd" app:showAsAction="never" />
    <item android:id="@id/rename_action" android:title="@string/file_browser_menu_item_rename" app:showAsAction="never" />
    <item android:id="@id/show_file_info_action" android:title="@string/file_browser_menu_item_file_info" app:showAsAction="never" />
</menu>