<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/popup_select"
        android:showAsAction="never"
        android:title="@string/file_browser_popup_select" />
    <item
        android:id="@id/popup_share"
        android:showAsAction="never"
        android:title="@string/file_browser_regular_selection_mode_share" />
    <item
        android:id="@id/popup_app_info"
        android:showAsAction="never"
        android:title="@string/app_browser_menu_item_app_info" />
    <item
        android:id="@id/popup_clear_cache"
        android:showAsAction="never"
        android:title="@string/app_browser_menu_item_clear_cache" />
    <item
        android:id="@id/popup_uninstall"
        android:showAsAction="never"
        android:title="@string/app_browser_menu_item_uninstall" />
</menu>