<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/view_mode_switch" android:title="@null" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/quantum_ic_sort_vd_theme_24" android:id="@id/sort" android:title="@string/file_browser_sort" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/sort_option_name" android:title="@string/file_browser_sort_option_name" app:showAsAction="never" />
            <item android:id="@id/sort_option_date_modified" android:title="@string/file_browser_sort_option_date_modified" app:showAsAction="never" />
            <item android:id="@id/sort_option_size" android:title="@string/file_browser_sort_option_size" app:showAsAction="never" />
        </menu>
    </item>
</menu>